syntax = "proto3";

package fuzoj.problem.v1;

option go_package = "fuzoj/api/gen/problem/v1;problemv1";

service ProblemService {
  rpc GetLatest(GetLatestRequest) returns (GetLatestResponse);
}

message GetLatestRequest {
  int64 problem_id = 1;
}

message ProblemLatestMeta {
  int64 problem_id = 1;
  int32 version = 2;
  string manifest_hash = 3;
  string data_pack_key = 4;
  string data_pack_hash = 5;
  int64 updated_at = 6;
}

message GetLatestResponse {
  ProblemLatestMeta meta = 1;
}
